--- a/asteroids/asteroids.html
+++ b/asteroids/asteroids.html
@@ -24,6 +24,7 @@ body {
   font-size:24pt;
   color:white;
   text-align:right;
+  user-select:none;
 }
 #copy {
   font-family: 'Orbitron';
@@ -34,6 +35,7 @@ body {
   bottom:20px;
   width:100%;
   text-align:center;
+  user-select:none;
 }
 .blueprint {
   display:none;
