--- a/asteroids/asteroids.html
+++ b/asteroids/asteroids.html
@@ -202,7 +202,7 @@ body {
   animation:rotatecw 10s linear infinite;
 }
 .ccw .frame {
-  animation-name:rotateccw;
+  animation-name:rotateccw !important;
 }
 .rm .frame {
   width:60px;
