--- a/asteroids/asteroids.html
+++ b/asteroids/asteroids.html
@@ -106,6 +106,16 @@ body {
   width:100px;
   z-index:12;
 }
+.xufob {
+  height:100px;
+  width:100px;
+  z-index:5;
+}
+.xufos {
+  height:50px;
+  width:50px;
+  z-index:5;
+}
 @keyframes hyperout {
   from {
     transform:scale(1);
@@ -173,11 +183,9 @@ body {
 }
 .us .frame {
   width:30px;
-  animation:aflip 0.5s linear infinite;
 }
 .ub .frame {
   width:60px;
-  animation:aflip 1s linear infinite;
 }
 @keyframes aflip {
   0% {
@@ -229,17 +237,19 @@ body {
   }
 }
 .shot {
-  height:4px;
-  width:4px;
   border-radius:50%;
   display:inline-block;  
   position:absolute;
   z-index:8;
 }
 .sshot {
+  height:4px;
+  width:4px;
   background-color:rgb(148, 176, 255);
 }
 .ushot {
+  height:6px;
+  width:6px;
   background-color:rgb(255, 113, 224);
 }
 .xrock {
@@ -402,7 +412,7 @@ body {
     <div class='frame'>
       <div class='rot'>
         <svg viewbox="0 0 200 200">
-          <g style="stroke:white; stroke-width:12; stroke-linejoin:round; stroke-opacity:0.8; fill-opacity:0.4; fill:rgb(240, 223, 192);">
+          <g style="stroke:white; stroke-width:12; stroke-linejoin:round; stroke-opacity:0.8; fill-opacity:0.4; fill:hsl(39, 23%, 55%);">
             <path d="m7,109.9369l0,-64.37379l71.46798,0.86408l-21.07389,-35.42719l84.29556,0.86408l51.31034,32.83496l0,26.78641l-54.97537,27.65049l53.14286,31.1068l-43.06404,58.75729l-30.23645,-19.87379l-65.05419,19.87379l-45.81281,-79.06312z"/>
           </g>
         </svg>
