--- a/asteroids/asteroids.html
+++ b/asteroids/asteroids.html
@@ -27,7 +27,7 @@ body {
   user-select:none;
 }
 #copy {
-  font-family: 'Orbitron';
+  font-family:'Orbitron';
   font-size:16pt;
   color:#909090;
   position:absolute;
@@ -187,7 +187,7 @@ body {
 .ub .frame {
   width:60px;
 }
-@keyframes aflip {
+@keyframes ufobulge {
   0% {
     transform:scaleX(1)
   }
@@ -309,37 +309,93 @@ body {
     transform:scale(1);
   }
 }
+#highscore {
+  position:absolute;
+  z-index:1;
+  left:0;
+  width:100%;
+  text-align:center;
+  top:20px;
+  font-family:'Orbitron';
+  font-size:14pt;
+  color:white;
+  user-select:none;
+}
+#gameover, #start {
+  font-family:'Orbitron';
+  font-size:44pt;
+  font-weight:bold;
+  color:white;
+  position:absolute;
+  width:100%;
+  text-align:center;
+  user-select:none;
+  top:28%;
+  display:none;
+  user-select:none;
+}
+#gameover {
+  z-index:20;  
+}
+#start {
+  z-index:1;
+}
+#congrats {
+  font-family:'Orbitron';
+  font-size:30pt;
+  color:#a0a0a0;
+  position:absolute;
+  z-index:20;  
+  width:100%;
+  text-align:center;
+  user-select:none;
+  top:40%;
+  display:none;
+  user-select:none;
+}
+#inits {
+  margin-top:20px;
+}
+#inits span {
+  color:white;
+  font-size:40pt;
+  font-weight:bold;
+  border-bottom:4px solid #a0a0a0;
+  margin:0 4px;
+  width:1.3em;
+  display:inline-block;
+  user-select:none;
+}
+#inits .curs {
+  background-color:white;
+  animation:curs 1s ease infinite;
+}
+@keyframes textgrow {
+  from {
+    transform:scale(0.5);
+    opacity:0;
+  }
+  to {
+    transform:scale(1);
+    opacity:1;
+  }
+}
+@keyframes curs {
+  0% {
+    background-color:white;
+  }
+  33% {
+    background-color:#404040;
+  }
+  66% {
+    background-color:white;
+  }
+}
 </style>
 </head>
 <body>
-  <div id='screen'>
-    <div id='stars2'></div>
-    <div id='stars3'></div>
-    <div id='score'></div>
-    <div id='copy'>&copy;2022 by Warren</div>
-  </div>
   <div id='xrockbp' class='blueprint'>
-    <div style='top:10%; left:44%'></div>
-    <div style='top:20%; left:82%'></div>
-    <div style='top:30%; left:66%'></div>
-    <div style='top:40%; left:23%'></div>
-    <div style='top:50%; left:45%'></div>
-    <div style='top:60%; left:62%'></div>
-    <div style='top:70%; left:12%'></div>
-    <div style='top:80%; left:2%'></div>
-    <div style='top:90%; left:99%'></div>
-    <div style='top:100%; left:56%'></div>
-    <div style='top:52%; left:10%'></div>
-    <div style='top:22%; left:20%'></div>
-    <div style='top:56%; left:30%'></div>
-    <div style='top:77%; left:40%'></div>
-    <div style='top:2%; left:50%'></div>
-    <div style='top:83%; left:60%'></div>
-    <div style='top:52%; left:70%'></div>
-    <div style='top:72%; left:80%'></div>
-    <div style='top:11%; left:90%'></div>
-    <div style='top:29%; left:100%'></div>
-    <div style='top:10%; left:10%'></div>
+    <div style='top:10%; left:44%'></div><div style='top:20%; left:82%'></div><div style='top:30%; left:66%'></div><div style='top:40%; left:23%'></div><div style='top:50%; left:45%'></div><div style='top:60%; left:62%'></div><div style='top:70%; left:12%'></div><div style='top:80%; left:2%'></div><div style='top:90%; left:99%'></div><div style='top:100%; left:56%'></div><div style='top:52%; left:10%'></div><div style='top:22%; left:20%'></div><div style='top:56%; left:30%'></div><div style='top:77%; left:40%'></div><div style='top:2%; left:50%'></div><div style='top:83%; left:60%'></div><div style='top:52%; left:70%'></div><div style='top:72%; left:80%'></div><div style='top:11%; left:90%'></div><div style='top:29%; left:100%'></div><div style='top:10%; left:10%'></div>
   </div>
   <div id='powbp' class='blueprint'>
     <svg viewbox="0 0 720 720">
@@ -418,6 +474,22 @@ body {
         </svg>
       </div>
     </div>
+  </div>
+  <div id='screen'>
+    <div id='stars2'></div>
+    <div id='stars3'></div>
+    <div id='score'></div>
+    <div id='highscore'>00</div>
+    <div id='gameover'>GAME OVER</div>
+    <div id='start'>START PLAYER 1</div>
+    <div id='congrats'>
+      <div>Your score is one of the ten best!</div>
+      <div>Please enter your initials:</div>
+      <div id='inits'>
+        <span class='curs'>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span>
+      </div>
+    </div>
+    <div id='copy'>&copy;2022 by Warren</div>
   </div>
 </body>
 <script>
