--- a/asteroids/asteroids.html
+++ b/asteroids/asteroids.html
@@ -43,7 +43,7 @@ body {
   color:white;
   position:absolute;
   z-index:10;
-  bottom:100px;
+  bottom:90px;
   width:100%;
   text-align:center;
   user-select:none;
@@ -422,7 +422,7 @@ body {
   width:100%;
   text-align:center;
   user-select:none;
-  top:12%;
+  top:5%;
   user-select:none;
   text-shadow: 
         -1px -1px 0px #000,
@@ -436,6 +436,7 @@ body {
 }
 #highscores h1 {
   font-size:46pt;
+  line-height:46pt;
 }
 #highscores div {
   font-size:30pt;
