--- a/asteroids/asteroids.html
+++ b/asteroids/asteroids.html
@@ -414,6 +414,10 @@ body {
   user-select:none;
   text-shadow:-1px -1px 0px #000,0px -1px 0px #000,1px -1px 0px #000,-1px  0px 0px #000,1px  0px 0px #000,-1px  1px 0px #000,0px  1px 0px #000,1px  1px 0px #000;
   display:none;
+  animation:fadein 3s normal 1;
+}
+@keyframes fadein {
+  from {opacity:0} to {opacity:1}
 }
 #welcome h1, #highscores h1 {
   font-size:46pt;
@@ -422,7 +426,7 @@ body {
 }
 #welcome h1 {
   color:rgb(0, 255, 21);
-  font-size:60pt;
+  font-size:72pt;
 }
 #welcome h2 {
   margin-top:1.5em;
