--- a/asteroids/asteroids.html
+++ b/asteroids/asteroids.html
@@ -366,6 +366,7 @@ body {
 }
 #inits {
   margin-top:20px;
+  padding-left:80px;
 }
 #inits span {
   color:white;
@@ -376,6 +377,9 @@ body {
   width:1.3em;
   display:inline-block;
   user-select:none;
+}
+#inits .co {
+  border-bottom:4px transparent;
 }
 #inits .curs {
   background-color:white;
@@ -646,13 +650,18 @@ body {
       <div>Your score is one of the ten best!</div>
       <div>Please enter your initials:</div>
       <div id='inits'>
-        <span class='curs'>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span>
+        <span class='curs'>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span class='co'>&nbsp;</span>
       </div>
     </div>
     <div id='press1'>PRESS 1 TO START</div>
     <div id='copy'>&copy;2022 by Warren</div>
   </div>
+<style></style><div id='injectedjunk'>This is injected. <a href='.'>hi</a></div>
 </body>
-<script>
-  window.on('DOMContentLoaded', () => new Controller());
+<script nonce='wghornsby'>
+  window.on('DOMContentLoaded', () => {
+    cleanup();
+    new Controller();
+  })
 </script>
+</html>
