forgot to restore 5 lives

--- a/asteroids/asteroids.html
+++ b/asteroids/asteroids.html
@@ -2,7 +2,7 @@
 <head>
   <script type='text/javascript' src='lib/lcd-simple.js'></script>
   <script type='text/javascript' src='lib/lcd-gaming.js'></script>
-  <script type='text/javascript' src='asteroids.js'></script>
+  <script type='text/javascript' src='asteroids.js?2205251254'></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
