--- a/asteroids/asteroids.html
+++ b/asteroids/asteroids.html
@@ -2,7 +2,7 @@
 <head>
   <script type='text/javascript' src='lib/lcd-simple.js'></script>
   <script type='text/javascript' src='lib/lcd-gaming.js'></script>
-  <script type='text/javascript' src='asteroids.js?2205251254'></script>
+  <script type='text/javascript' src='asteroids.js?2205251309'></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
@@ -418,7 +418,10 @@ body {
   user-select:none;
   text-shadow:-1px -1px 0px #000,0px -1px 0px #000,1px -1px 0px #000,-1px  0px 0px #000,1px  0px 0px #000,-1px  1px 0px #000,0px  1px 0px #000,1px  1px 0px #000;
   display:none;
+}
+.fadein {
   animation:fadein 3s normal 1;
+  display:block !important;
 }
 @keyframes fadein {
   0% {
