--- a/adventure/adventure.html
+++ b/adventure/adventure.html
@@ -3,6 +3,7 @@
   <script type='text/javascript' src='lib/lcd-simple.js'></script>
   <script type='text/javascript' src='games/adv01.js'></script>
   <script type='text/javascript' src='adventure.js'></script>
+  <script type='text/javascript' src='adventureui.js'></script>
 <style>
 body {
   margin:0;
@@ -12,29 +13,29 @@ body {
   background-color:#000;
 }
 screen {
-  margin:120pt auto 0 auto;
+  margin:60pt auto 0 auto;
   font-size:20pt;
   font-family:Consolas;
   line-height:30pt;
   color:aquamarine;
-  width:840pt;
+  width:830pt;
 }
 header {
   color:white;
   position:absolute;
   z-index:10;
   background-color:black;
-  width:840pt;
+  width:830pt;
 }
 footer {
   color:white;
   position:absolute;
-  top:600pt;
+  top:660pt;
   z-index:11;
   background-color:black;
-  width:840pt;
+  width:830pt;
 }
-visible, obvious {
+visible, obvious, divider {
   display:none;
 }
 cursor {
@@ -51,15 +52,15 @@ cursor {
 <body>
   <screen>
     <header>
-      <room></room><visible>.&nbsp;&nbsp;Visible items:<br><br><items>Trees.</items></visible>
+      <room></room><visible>.&nbsp;&nbsp;Visible items:<br><br><items></items></visible>
       <obvious><br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Some obvious exits are: <exits></exits></obvious>
       <divider><br>&lt;------------------------------------------------------------------------&gt;</divider>
     </header>
     <output></output>
-    <footer>&nbsp;-------> Tell me what to do? <entry><cursor>&nbsp;</cursor></entry></footer>
+    <footer>&nbsp;-------> Tell me what to do? <entry></entry><cursor>&nbsp;</cursor></footer>
   </screen>
 </body>
 <script nonce='wghornsby'>
-  //window.on('DOMContentLoaded', () => )
+  window.on('DOMContentLoaded', () => new SA.Screen$());
 </script>
 </html>
