--- a/adventure/adventure.html
+++ b/adventure/adventure.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <script type='text/javascript' src='lib/lcd-simple.js'></script>
-  <script type='text/javascript' src='games/adv01.js'></script>
+  <script type='text/javascript' src='games/adv03.js'></script>
   <script type='text/javascript' src='adventure.js'></script>
   <script type='text/javascript' src='adventureui.js'></script>
 <style>
@@ -54,7 +54,7 @@ cursor {
     <header>
       <room></room><visible>.&nbsp;&nbsp;Visible items:<br><br><items></items></visible>
       <obvious><br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Some obvious exits are: <exits></exits></obvious>
-      <divider><br>&lt;------------------------------------------------------------------------&gt;</divider>
+      <divider><br>&lt;------------------------------------------------------------------------&gt;<br><br></divider>
     </header>
     <output></output>
     <footer>&nbsp;-------> Tell me what to do? <entry></entry><cursor>&nbsp;</cursor></footer>
