--- a/adventure/adventure.html
+++ b/adventure/adventure.html
@@ -1,9 +1,10 @@
 <html>
 <head>
   <script type='text/javascript' src='lib/lcd-simple.js'></script>
-  <script type='text/javascript' src='games/adv02.js'></script>
-  <script type='text/javascript' src='adventure.js'></script>
-  <script type='text/javascript' src='adventureui.js'></script>
+  <script type='text/javascript' src='games/adv04.js'></script>
+  <script type='text/javascript' src='sa-game.js'></script>
+  <script type='text/javascript' src='sa-file.js'></script>
+  <script type='text/javascript' src='sa-ui.js'></script>
 <style>
 body {
   margin:0;
