--- a/adventure/adventure.html
+++ b/adventure/adventure.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <script type='text/javascript' src='lib/lcd-simple.js'></script>
-  <script type='text/javascript' src='games/adv06.js'></script>
+  <script type='text/javascript' src='games/adv08.js'></script>
   <script type='text/javascript' src='sa-game.js'></script>
   <script type='text/javascript' src='sa-file.js'></script>
   <script type='text/javascript' src='sa-ui.js'></script>
@@ -53,7 +53,7 @@ cursor {
 <body>
   <screen>
     <header>
-      <room></room><visible>.&nbsp;&nbsp;Visible items:<br><br><items></items></visible>
+      <room></room><visible>.&nbsp;Visible items:<br><br><items></items></visible>
       <obvious><br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Some obvious exits are: <exits></exits></obvious>
       <divider><br>&lt;------------------------------------------------------------------------&gt;<br><br></divider>
     </header>
